crates/test-files/fixtures/compile_errors/duplicate_event_in_contract.fe
contract Foo {
    event MyEvent {
        idx addr1: address
    }

    event MyEvent {
        idx addr1: address
    }
}
